[package]
name = "ringbahn"
version = "0.0.0-experimental.2"
authors = ["Without Boats <woboats@gmail.com>"]
description = "an experimental safe API for io-uring"
repository = "https://github.com/withoutboats/ringbahn"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
access-queue = "1.1.0"
futures-io = "0.3.5"
futures-core = "0.3.5"
parking_lot = "0.10.2"
once_cell = "1.3.1"
libc = "0.2.71"
uring-sys = "0.6.1"
iou = "0.0.0-ringbahn.1"

[dev-dependencies]
tempfile = "3.1.0"
futures = { version = "0.3.5", features = ["thread-pool"] }
